scss/partials/_expanded_post.scss
div.expanded-post {
  width: 640px;
  margin: 0 auto;
  padding: #{$navbar_height}px 0 24px;

  @include mobile() {
    width: 100%;
    padding: 16px;
    margin-top: 56px;
    background-color: white;
    padding: 16px;

    // Add some extra padding on android at the bottom
    // to make sure the add comment field is not hidden
    // behind the keyboard, Safari resize the viewport when
    // the keyboard pops out so it's not a problem
    &.android {
      padding-bottom: 25vh;
    }
  }

  div.activity-share-container {
    // position: unset;

    div.activity-share-modal-container {
      top: 36px;
      right: 64px;
      margin-top: 0;
    }
  }

  div.expanded-post-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: #{$navbar_height}px;
    padding: 12px 16px;
    border-bottom: 1px solid rgba($deep_navy, 0.15);
    background-color: $grey_num_2;
    z-index: 2;

    @include mobile() {
      width: 100vw;
      height: #{$mobile_navbar_height}px;
      padding: 11px 16px;
      position: fixed;
      top: 0;
      left: 0;
      border-bottom: 1px solid $divider_line_grey;
      background-color: white;
    }

    button.back-to-board {
      float: left;
      height: 32px;
      width: 32px;
      border-radius: 4px;
      opacity: 1;
      background-color: rgba($deep_navy, 0.1);
      background-image: cdnUrl("/img/ML/mobile_dark_x.svg");
      background-size: 12px 12px;
      background-repeat: no-repeat;
      background-position: center;

      @include big_web(){
        &:hover {
          background-color: rgba($deep_navy, 0.2);
        }
      }
    }

    div.expanded-post-header-center {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 40vw;
      height: 24px;
      position: absolute;
      top: 16px;
      left: 50%;
      transform: translateX(-50%);

      @include mobile() {
        display: none;
      }

      @include user-profile(24);

      div.user-avatar-img-container {
        float: left;
      }

      span.header-title {
        margin-left: 8px;
        @include OC_Body_Bold();
        font-size: 14px;
        line-height: 24px;
        color: $deep_navy;
        white-space: pre;
        max-width: calc(100% - 24px - 8px - 86px - 8px);
        overflow: hidden;
        text-overflow: ellipsis;
      }

      @include must-see-tag();

      div.must-see-tag {
        float: left;
        margin-left: 8px;
        margin-top: 2px;

        @include mobile() {
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }

      @include follow-up-tag();

      div.follow-up-tag {
        float: left;
        margin-left: 8px;
        margin-top: 2px;

        @include mobile() {
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }
    }

    div.more-menu {
      float: unset;
      position: absolute;
      top: 12px;
      right: 16px;
      height: 32px;

      div.activity-move {
        left: -64px;
        top: 34px;
      }

      button.more-menu-bt {
        width: 32px;
        height: 32px;
        background-color: rgba($deep_navy, 0.1);
        border-top-left-radius: 4px;
        border-bottom-left-radius: 4px;
        padding: 0;
        margin: 0;
        opacity: 1;

        &:not(.disabled):hover {
          background-color: rgba($deep_navy, 0.2);
        }
      }

      button.more-menu-share-bt {
        width: 32px;
        height: 32px;
        background-color: rgba($deep_navy, 0.1);
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
        border-left: 1px solid rgba($deep_navy, 0.1);
        padding: 0;
        margin: 0;
        opacity: 1;
        background-image: cdnUrl("/img/ML/more_menu_new_share.svg");
        background-size: 14px 14px;

        &:not(.disabled):hover {
          background-color: rgba($deep_navy, 0.2);
        }
      }

      div.more-menu-create-follow-up-bt-container button.more-menu-create-follow-up-bt, button.more-menu-complete-follow-up-bt {
        &:before {
          position: absolute;
          content: "";
          width: 1px;
          height: 32px;
          left: -16px;
          top: 0;
          background-color: rgba($deep_navy, 0.2);
        }
      }

      button.more-menu-complete-follow-up-bt {
        position: relative;
        margin-left: 32px;
        padding: 7px 13px 7px 36px;
        background-color: $carrot_green;
        color: white;
        border-radius: 4px;
        @include OC_Body_Bold();
        font-size: 14px;
        line-height: 18px;
        background-image: cdnUrl("/img/ML/carrot_checkbox_mark.svg");
        background-size: 14px 10px;
        background-position: left 14px top 11px;
        background-repeat: no-repeat;
        height: 32px;
        width: auto;
        opacity: 1;
        float: right;
      }

      div.more-menu-create-follow-up-bt-container {
        float: right;
        margin-left: 32px;
        width: 32px;
        height: 32px;

        div.tooltip {
          width: 128px;
        }

        button.more-menu-create-follow-up-bt {
          width: 32px;
          height: 32px;
          position: relative;
          background-color: rgba($deep_navy, 0.1);
          background-image: cdnUrl("/img/ML/mobile_create_follow_up.svg");
          background-size: 13px 16px;
          background-position: center;
          background-repeat: no-repeat;
          border-radius: 4px;
          opacity: 1;

          &:not(.disabled):hover {
            background-color: rgba($deep_navy, 0.2);
          }
        }
      }

      ul.more-menu-list {
        top: 34px;
        left: 0px;
      }
    }
  }

  div.ziggeo-player {
    margin-top: 16px;
    width: 638px;
    height: 478px;
    position: relative;

    video {
      max-height: 478px;
    }

    @include mobile(){
      width: 100vw;
      height: calc(100vw *  0.75);
    }
  }

  div.expanded-post-headline {
    @include activity-title(26px, 33px);
    margin-top: 16px;

    @include mobile() {
      @include activity-title(22px, 28px);
      margin-top: 0;
    }
  }

  div.expanded-post-author {
    @include user-profile(24);
    margin-top: 16px;
    min-height: 24px;

    @include mobile() {
      margin-top: 8px;
    }

    div.user-avatar-img-container {
      float: left;
      margin-right: 8px;
    }

    div.expanded-post-author-inner {
      @include OC_Body_Book();
      font-size: 12px;
      color: rgba($deep_navy, 0.5);
      line-height: 24px;

      span.expanded-post-author-inner-label {
        @include mobile() {
          margin-right: 8px;
          margin-bottom: 8px;
          display: inline-block;
        }
      }

      div.must-see-tag {
        display: none;

        @include mobile() {
          display: inline-block;
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }

      @include follow-up-tag();

      div.follow-up-tag {
        display: none;

        @include mobile() {
          display: inline-block;
          margin-left: 0;
          margin-top: 3px;
          margin-bottom: 8px;
          overflow: hidden;
          max-width: 100%;
          text-overflow: ellipsis;
          white-space: pre-wrap;
          word-break: break-word;
        }
      }
    }
  }

  div.expanded-post-abstract {
    @include activity-abstract(16px, 20px);
    margin: 16px 0 24px;
    @include OC_Body_Bold();
    white-space: pre-wrap;
    word-break: break-word;

    // Abstract is bold only in expanded post view
    // we need to make sure italic doesn't override
    // the font weight only here
    i, i strong, i b, b i, strong i {
      @include OC_Body_Bold_Italic();
    }

    @include mobile() {
      margin: 8px 0 16px;
    }
  }

  div.expanded-post-body {
    @include activity-body(17, 22, $deep_navy);
    margin-top: 16px;

    @include mobile() {
      margin-top: 8px;
      @include activity-body(18, 24, $deep_navy);
    }

    .interactive-image {
      cursor: zoom-in;

      &:hover {
        opacity: 0.7;
      }
    }
  }

  // div.expanded-post-mobile-reactions {
  //   display: none;

  //   @include mobile() {
  //     display: block;
  //     height: 48px;
  //     margin: 24px 0 0;
  //     padding-bottom: 16px;
  //     border-bottom: 1px solid $ultra_light_grey;
  //   }
  // }

  div.expanded-post-footer {
    margin-top: 16px;
    min-height: 26px;
    position: relative;

    @include mobile() {
      margin-top: 3px;
      min-height: 32px;
    }

    div.expanded-post-footer-mobile-group {
      @include mobile() {
        float: left;
        height: 20px;
        margin-top: 20px;
      }
    }

    div.is-comments {
      margin-right: 16px;
      float: left;
    }

    div.reactions {
      float: left;
      margin-right: 14px;

      @include mobile() {
        margin-top: 13px;
      }

      div.reactions-picker-container {
        div.emoji-mart {
          bottom: unset;
          top: 0;
          left: calc(100% + 8px);

          @include mobile(){
            bottom: unset;
            right: unset;
            top: unset;
            left: unset;
          }
        }
      }
    }

    div.expanded-post-wrt-container {
      float: left;
      position: relative;
      margin-top: 4px;

      @include mobile() {
        margin-top: 0;
      }
    }
  }

  div.expanded-post-comments {
    padding-bottom: 0;
    margin-top: 24px;

    @include mobile() {
      margin-top: 16px;
      width: 100%;
      padding: 16px 0;
    }

    div.stream-comments {
      width: calc(100% + 32px);
      margin-left: -16px;
    }
  }
}

